--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="index.css" />
     <title>Furniture Emporium</title>
   </head>
   <body>
@@ -13,37 +14,37 @@
         </p>
       </header>
       <article>
-        <h2>Ergonomic Couch</h2>
-        <p>
+        <h2 class="product">Ergonomic Couch</h2>
+        <p class="description">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
           delectus iusto corporis id, quo cumque, perferendis consequatur
           possimus repellendus quisquam minus sapiente aut suscipit fugit quia
           debitis totam et incidunt!
         </p>
-        <p>$20.00 <s>$25.00</s></p>
-        <button>Add to cart</button>
+        <p class="cost">$20.00 <s>$25.00</s></p>
+        <button class="add">Add to cart</button>
       </article>
       <article>
-        <h2>Frozen Table</h2>
-        <p>
+        <h2 class="product">Frozen Table</h2>
+        <p class="description">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
           delectus iusto corporis id, quo cumque, perferendis consequatur
           possimus repellendus quisquam minus sapiente aut suscipit fugit quia
           debitis totam et incidunt!
         </p>
-        <p>$49.95 <s>$60.00</s></p>
-        <button>Add to cart</button>
+        <p class="cost">$49.95 <s>$60.00</s></p>
+        <button class="add">Add to cart</button>
       </article>
       <article>
-        <h2>Handcrafted Chair</h2>
-        <p>
+        <h2 class="product">Handcrafted Chair</h2>
+        <p class="description">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
           delectus iusto corporis id, quo cumque, perferendis consequatur
           possimus repellendus quisquam minus sapiente aut suscipit fugit quia
           debitis totam et incidunt!
         </p>
-        <p>$18.99 <s>$32.99</s></p>
-        <button>Add to cart</button>
+        <p class="cost">$18.99 <s>$32.99</s></p>
+        <button class="add">Add to cart</button>
       </article>
     </main>
   </body>
